@@ -7,67 +7,89 @@
   <groupId>com.coveros.demo</groupId>
   <artifactId>helloworld</artifactId>
   <version>1.1</version>
-  <packaging>jar</packaging>
+<!--   <packaging>jar</packaging> -->
 
   <name>Hello World</name>
   <description>The most basic of Java programs.</description>
   <url>https://www.coveros.com/</url>
   <inceptionYear>2018</inceptionYear>
-
+  
+  
+  <dependencies>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.4</version>
+        <scope>test</scope>
+    </dependency>
+  </dependencies>
+  
+  
+  
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <jdk.version>1.8</jdk.version>
-
-    <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>  
+    <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
   </properties>
 
   <build>
     <plugins>
         <plugin>
-            <groupId>org.jacoco</groupId>
-            <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.7.7.201606060606</version>
-            <executions>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.17</version>
+            <configuration>
+                <forkCount>5</forkCount> <!-- changed this to 0 -->
+                <argLine>@{argLine} -Xmx1024m </argLine>
+                <reuseForks>false</reuseForks>
                 <execution>
-                    <goals>
-                        <goal>prepare-agent</goal>CodeOps
-                    </goals>
+                <id>default-prepare-agent</id>
+                <goals>
+                   <goal>prepare-agent</goal>
+                </goals>
                 </execution>
-                <execution>
-                    <id>report</id>
-                    <phase>prepare-package</phase>
-                    <goals>
-                        <goal>report</goal>
-                    </goals>
-                </execution>
-                <execution>
-                    <id>jacoco-check</id>
-                    <goals>
-                        <goal>check</goal>
-                    </goals>
-                    <configuration>
-                        <rules>
-                            <rule>
-                                <limits>
-                                    <limit>
-                                        <minimum>0.9</minimum>
-                                    </limit>
-                                </limits>
-                            </rule>
-                        </rules>
-                    </configuration>
-                </execution>
-            </executions>
+                <!-- <threadCount>1</threadCount> --> <!-- shall be used with 'parallel' -->
+                <printSummary>true</printSummary>
+                <!-- <skipTests>false</skipTests> --> <!-- defaults to false -->
+
+                <!-- run test in headless mode -->
+                <systemPropertyVariables>
+                    <glass.platform>Monocle</glass.platform>
+                    <monocle.platform>Headless</monocle.platform>
+                    <prism.order>d3d</prism.order>
+                </systemPropertyVariables>
+
+                <argLine>
+                    --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                </argLine>
+            </configuration>
         </plugin>
-        <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven.compiler.plugin.version}</version>
-        <configuration>
-            <source>${jdk.version}</source>
-            <target>${jdk.version}</target>
-        </configuration>
+         <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.8.2</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>jacoco-report</id>
+              <phase>test</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+              <!-- default target/jscoco/site/* -->
+              <configuration>
+                <outputDirectory>target/jacoco-report</outputDirectory>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
     </plugins>
   </build>
